bad/method_call_invalid_arg_conversion_class_to_class_down.example_compiler_output
ERROR
[1mbad/method_call_invalid_arg_conversion_class_to_class_down.lat:6:14: [1;31merror: [0;1mvalue of type `X` is not convertible to type `Y`[m
	(new G).foo(new X);
	            [1;32m^[m
[1mbad/method_call_invalid_arg_conversion_class_to_class_down.lat:11:2: [1;34mnote: [0;1m`foo` declared here[m
	void foo(Y a) {}
	[1;32m^[m
